<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>move_base_msgs</name>
    <version>1.13.0</version>
    <description>

        Holds the action description and relevant messages for the move_base package

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url type="website">http://wiki.ros.org/move_base_msgs</url>
    <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>builtin_interfaces</build_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

